# npc-engine

./: .coveragerc  .dockerignore  .gitignore  .pip-lic-ignore  CHANGELOG.txt  CNAME  CONTRIBUTING.md  Dockerfile.cpu  Dockerfile.cuda  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  environment.yml  mkdocs.yml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini  versions.json
chatbot_server/: __init__.py  chatbot.py  cli.py  dialog_script.py  speech_synthesis.py  text_generation.py  version.py
docs/: benchmarks.md  index.md  not_ready.md
hooks/: hook-librosa.py  hook-onnxruntime.py  hook-sacremoses.py  librosa_hook.py  sacremoses_hook.py
inference_engine/: __init__.py  cli.py  inference_engine.py  semantic_tests.py  speech_synthesis.py  text_generation.py  version.py
master/: 404.html  index.html  objects.inv  sitemap.xml
npc_engine/: __init__.py  cli.py  utils.py  version.py  zmq_server.py
stable/: 404.html  index.html
tests/: conftest.py  test_chatbot.py  test_cli.py  test_dialog_script.py  test_example.py  test_inference_engine.py  test_model_compliance.py  test_model_manager.py  test_semantic_tests.py  test_speech_synthesis.py  test_text_gen.py  test_tts.py  test_zmq_server.py
v0.0.2/: 404.html  CNAME  index.html  objects.inv  sitemap.xml
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.1/: 404.html  CNAME  index.html  sitemap.xml
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.4/: 404.html  index.html  objects.inv  sitemap.xml
(+364 files in other folders)
