[metadata]
description-file = README.md
license_files=LICENSE

[flake8]
ignore = E226,E302,E41,W503,E203,W291,E402,E128
max-line-length = 120
exclude = tests/*, docs/*, .tox/*, dist, __pycache__, .git, build
max-complexity = 10
per-file-ignores =
    npc_engine/services/tts/flowtron/text/*:D103,D400,D210,D100

